feat: add Product Card
